# Suqua

./: 7-29.txt  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  Makefile  README.md  cmake_install.cmake  find-SDL2_mixer.cmake  out.sh  planning.txt  work.txt
Demo/Platformer/: CMakeLists.txt  Platformer.cpp  WorldScene.cpp  WorldScene.h
Demo/TextureRender/: CMakeLists.txt  TextureRender.cpp  WorldScene.cpp  WorldScene.h
Stabby/: CMakeLists.txt  Client.cpp  Client.h  ClientPlayerLC.cpp  ClientPlayerLC.h  ConnectCommand.cpp  ConnectCommand.h  HeadCommand.cpp  HeadParticleLC.cpp  HeadParticleLC.h  Makefile  OnlinePlayerLC.cpp  OnlinePlayerLC.h  PlayerCam.cpp  PlayerCam.h  PlayerGC.cpp  PlayerGC.h  Stabby.cpp  Stabby.vcxproj  Stabby.vcxproj.filters  cmake_install.cmake
Stabby/client/: Client.cpp  Client.h
Stabby/command/: AttackSpeedCommand.cpp  AttackSpeedCommand.h  ConnectCommand.cpp  ConnectCommand.h  FacingCommand.cpp  FacingCommand.h  FrameByFrameCommand.cpp  FrameByFrameCommand.h  HeadCommand.cpp  HeadCommand.h  HealthCommand.cpp  HealthCommand.h  KillCommand.cpp  KillCommand.h  LoadStageCommand.cpp  LoadStageCommand.h  MoveSpeedCommand.cpp  MoveSpeedCommand.h  PaletteCommand.cpp  PaletteCommand.h  SaveStageCommand.cpp  SaveStageCommand.h  SpawnPlayerCommand.cpp  SpawnPlayerCommand.h  StaminaCommand.cpp  StaminaCommand.h  StartCommand.cpp  StartCommand.h  TeamChangeCommand.cpp  TeamChangeCommand.h  TeleportCommand.cpp  TeleportCommand.h  VelocityCommand.cpp  VelocityCommand.h  WeaponCommand.cpp  WeaponCommand.h
Stabby/editor/: EditableColliderGC.cpp  EditableColliderGC.h  EditableStageComponent.cpp  EditableStageComponent.h  EditableSystem.cpp  EditableSystem.h
Stabby/game/: Game.cpp  Game.h  SessionSystem.cpp  SessionSystem.h
Stabby/graphics/: CapturePointGC.cpp  CapturePointGC.h  HeadParticleLC.cpp  HeadParticleLC.h  HealthReader.cpp  HealthReader.h  NameTagGC.cpp  NameTagGC.h  PaletteManager.cpp  PaletteManager.h  PlayerGC.cpp  PlayerGC.h  StaminaReader.cpp  StaminaReader.h  StatBarComponent.cpp  StatBarComponent.h  TeamPointsReader.cpp  TeamPointsReader.h
Stabby/particles/: basic.vert  float.vert
Stabby/player/: ClientPlayerComponent.cpp  ClientPlayerComponent.h  ClientPlayerSystem.cpp  ClientPlayerSystem.h  ClientSpawnSystem.cpp  ClientSpawnSystem.h  OnlinePlayerLC.cpp  OnlinePlayerLC.h
Stabby/rsrc/: settings.json
Stabby/sounds/: PlayerSFX.cpp  PlayerSFX.h
StabbyCore/: Attack.cpp  Attack.h  CMakeLists.txt  ComputeShader.cpp  ComputeShader.h  FileNotFoundException.cpp  Makefile  ParticleSystem.cpp  ParticleSystem.h  PlayerData.h  PlayerLC.cpp  PlayerLC.h  RandomUtil.cpp  ServerClientData.h  StabbyCore.vcxproj  StabbyCore.vcxproj.filters  Stage.cpp  Stage.h  cmake_install.cmake
StabbyCore/combat/: Attack.cpp  Attack.h  AttackManager.cpp  AttackManager.h  AttackTag.h  CombatComponent.cpp  CombatComponent.h  CombatData.h  CombatSystem.cpp  CombatSystem.h  WeaponManager.cpp  WeaponManager.h
StabbyCore/gamemode/: CapturePointComponent.cpp  CapturePointComponent.h  DominationMode.cpp  DominationMode.h
StabbyCore/gamestate/: GameState.cpp  GameState.h
StabbyCore/include/: combat.h  gamemode.h  gamestate.h  network.h  player.h  stage.h
StabbyCore/network/: Host.cpp  Host.h  OnlineComponent.cpp  OnlineComponent.h  OnlineSystem.cpp  ServerClientData.h
StabbyCore/player/: AIPlayerComponent.cpp  AIPlayerComponent.h  ClimbableNavMesh.cpp  ClimbableNavMesh.h  NameTagComponent.cpp  NameTagComponent.h  PlayerData.h  PlayerLC.cpp  PlayerLC.h  PlayerManager.cpp  PlayerManager.h  PlayerStateComponent.cpp  PlayerStateComponent.h
StabbyCore/stage/: ClimbableComponent.cpp  ClimbableComponent.h  ClimbableSystem.cpp  ClimbableSystem.h  Stage.cpp  Stage.h
StabbyOrganized/: CMakeLists.txt  StabbyOrganized.cpp  StabbyOrganized.h
StabbyServer/: CMakeLists.txt  Connection.cpp  Connection.h  Makefile  ServerPlayerLC.cpp  ServerPlayerLC.h  Settings.h  StabbyServer.cpp  StabbyServer.vcxproj  StabbyServer.vcxproj.filters  User.cpp  User.h  cmake_install.cmake  settings
StabbyServer/player/: ServerPlayerComponent.cpp  ServerPlayerComponent.h  ServerPlayerSystem.cpp  ServerPlayerSystem.h
StabbyServer/rsrc/: settings.json
StabbyServer/server/: Connection.cpp  Connection.h  Settings.h  User.cpp  User.h
Suqua/: .CMakeLists.txt.swp  CMakeLists.txt  Makefile  cmake_install.cmake
Suqua/header/: .ByteOrder.h.swp  .ByteStream.h.swp  .Game.h.swp  .SyncSystem.h.swp  AABB.h  AITopDownBasic.h  AimToLStickComponent.h  AimToMouseComponent.h  AngleUtil.h  AnimatedSprite.h  ByteOrder.h  ByteStream.h  CHKill.h  CharBuffer.h  CharacterGFXComponent.h  ClientSyncSystem.h  CollisionHandler.h  Color.h  Command.h  ComponentMacros.h  ComputeShader.h  Controller.h  ControllerComponent.h  DamageCalculator.h  DamageComponent.h  DataComponent.h  DebugFIO.h  DebugIO.h  DirectionComponent.h  DirectionData.h  DynamicBitset.h  EntityBaseComponent.h  EntitySystem.h  EventComponent.h  EventComponentDataFields.h  FileNotFoundException.h  FontData.h  Framebuffer.h  GLLightSource.h  GLLightSystem.h  (+84 more)
Suqua/shaders/: image.vert  particle.frag  particle.vert  primitive.vert  text.frag
Suqua/src/: .Game.cpp.swp  .SyncSystem.cpp.swp  AABB.cpp  AITopDownBasic.cpp  AimToLStickComponent.cpp  AimToMouseComponent.cpp  AnimatedSprite.cpp  BitmapFont.cpp  ByteOrder.cpp  ByteStream.cpp  CHKill.cpp  CharacterGFXComponent.cpp  ClientSyncSystem.cpp  CommandManager.cpp  ComputeShader.cpp  Controller.cpp  ControllerComponent.cpp  DamageComponent.cpp  DataComponent.cpp  DebugFIO.cpp  DebugIO.cpp  DirectionComponent.cpp  DynamicBitset.cpp  EntityBaseComponent.cpp  EntitySystem.cpp  EventComponent.cpp  ExitCommand.cpp  FileNotFoundException.cpp  FontData.cpp  Framebuffer.cpp  GLLightSource.cpp  GLLightSystem.cpp  GLRenderer.cpp  Game.cpp  HRTag.cpp  HealthComponent.cpp  HitboxComponent.cpp  Host.cpp  HurtboxComponent.cpp  IDKeyboardMouse.cpp  (+56 more)
Tests/Box3/: Box3.cpp  BoxComponent.cpp  BoxScene.cpp  BoxScene.h  ButtonComponent.cpp  ButtonComponent.h  CMakeLists.txt  ClientBoxScene.cpp  ClientBoxScene.h  (+12 more)
(+396 files in other folders)
